--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "buidlai",
+  "name": "upstage-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "^2.7.6",
-    "framer-motion": "^12.6.5",
+    "@pinecone-database/pinecone": "^5.1.1",
+    "form-data": "^4.0.2",
+    "formidable": "^3.5.2",
     "next": "15.3.0",
+    "node-fetch": "^2.7.0",
+    "node-html-parser": "^7.0.1",
+    "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "autoprefixer": "^10.4.21",
+    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4"
   }
 }
