--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upstage-test",
+  "name": "Buidl AI",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.6",
     "@pinecone-database/pinecone": "^5.1.1",
     "form-data": "^4.0.2",
     "formidable": "^3.5.2",
+    "framer-motion": "^11.9.0",
     "next": "15.3.0",
     "node-fetch": "^2.7.0",
     "node-html-parser": "^7.0.1",
@@ -21,9 +23,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@headlessui/react": "^2.2.1",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0"
   }
 }
