changed model to llama3.3b

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ OPENAI_API_KEY=your_api_key_here
 # Required for vector storage and similarity search
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
+
+# Add your RedPill API key here
+REDPILL_API_KEY=your-redpill-api-key-goes-here
