--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.7.6",
     "framer-motion": "^12.6.5",
     "next": "15.3.0",
+    "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
