--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# data directories
 /data
 /ai-prompts
+
+# qdrant storage
+/qdrant_storage
+qdrant_storage/
