--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,7 @@
-# Upstage API Key - Get yours at https://upstage.ai
-# Used for embeddings generation (embedding-passage model)
-UPSTAGE_API_KEY=your_api_key_here
-
-# OpenAI API Key - Get yours at https://platform.openai.com
-# Used for chat completion (gpt-4)
-OPENAI_API_KEY=your_api_key_here
-
-# Qdrant Configuration - For local setup use defaults
-# Required for vector storage and similarity search
+UPSTAGE_API_KEY=
+PINECONE_API_KEY=
+PINECONE_INDEX_NAME=upstage-test
+OPENAI_API_KEY=
 QDRANT_HOST=localhost
 QDRANT_PORT=6333
-
-# Add your RedPill API key here
-REDPILL_API_KEY=your-redpill-api-key-goes-here
+REDPILL_API_KEY=
